fixed pop-up visibility

--- a/src/app/components/campagnes/header/header.component.scss
+++ b/src/app/components/campagnes/header/header.component.scss
@@ -50,14 +50,14 @@
 
 .pop-up{
     opacity: 1;
-    position: absolute;
-    right: 30px;
-    top: 100px;
+    position: relative;
+    left: 200px;
+    top: 50px;
     align-items: center;
     display: flex;
     border-radius: 10px;
     background-color: white;
-    padding: 10px 20px;
+    padding: 5px 20px;
     box-shadow: 0 0 10px rgba(128, 128, 128, .4);
     z-index: 1;
     transition: all 0.3s linear;
@@ -76,8 +76,8 @@
             z-index: 3;
         }
         img{
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 35px;
             border-radius: 40px;
             border: solid 3px white;
         }
@@ -90,7 +90,7 @@
     position: absolute;
     height: 0;
     opacity: 0;
-    right: 30px;
-    top: 90px;
+    right: 200px;
+    top: 50px;
 
 }
